# rapid

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_8md.html  README_8md_source.html  _8ycm__extra__conf_8py.html  _8ycm__extra__conf_8py.js  _8ycm__extra__conf_8py_source.html  action__client_8cpp.html  action__client_8cpp_source.html  action__client_8h.html  action__client_8h_source.html  annotated.html  annotated.js  arm_8cpp.html  arm_8cpp_source.html  arm_8h.html  arm_8h_source.html  arm__id_8h.html  arm__id_8h.js  arm__id_8h_source.html  arm__joints_8cpp.html  arm__joints_8cpp.js  arm__joints_8cpp_source.html  arm__joints_8h.html  arm__joints_8h.js  arm__joints_8h_source.html  axes__markers_8h.html  axes__markers_8h.js  axes__markers_8h_source.html  box3d__roi__server_8cpp.html  box3d__roi__server_8cpp_source.html  box3d__roi__server_8h.html  box3d__roi__server_8h_source.html  camera__interface_8h.html  camera__interface_8h_source.html  (+768 more)
applications/object_search/: CMakeLists.txt  package.xml
applications/object_search/launch/: experiment.launch  params.launch
applications/object_search/rviz/: object_search.rviz
applications/object_search/src/: capture_roi.cpp  cloud_database.cpp  command_line.cpp  commands.cpp  console_main.cpp  experiment.cpp  experiment_cli_main.cpp  experiment_commands.cpp  experiment_main.cpp  object_search.cpp  object_search_main.cpp  object_search_node.cpp
rapid_collision/: CMakeLists.txt  README.md  package.xml
rapid_collision/include/rapid_collision/: collision_checks.h  obb.h
rapid_collision/src/: box_demo_main.cpp  collision_checks.cpp  obb.cpp
rapid_fetch/: CMakeLists.txt  package.xml
rapid_fetch/include/rapid_fetch/: fetch.h  gripper.h
rapid_fetch/src/: fetch.cpp  gripper.cpp
rapid_msgs/: CMakeLists.txt  README.md  package.xml
rapid_msgs/msg/: ClosingRegion.msg  LandmarkInfo.msg  Roi3D.msg  SceneInfo.msg  StaticCloud.msg  StaticCloudInfo.msg
rapid_msgs/srv/: CaptureRoi3D.srv  GetStaticCloud.srv  ListStaticClouds.srv  MoveArm.srv  RemoveStaticCloud.srv  SaveStaticCloud.srv  UseGrippers.srv
rapid_pbd/: CMakeLists.txt  README.md  package.xml
rapid_pbd/config/: pr2_sim.rviz  sensors_dummy.yaml  surface_segmentation.yaml
rapid_pbd/frontend/: bower.json  build.sh  index.html  manifest.json
rapid_pbd/include/rapid_pbd/: action_clients.h  action_executor.h  action_names.h  action_utils.h  db_names.h  editor.h  errors.h  fetch_actions.h  joint_state.h  joint_state_reader.h  landmarks.h  motion_planning.h  pr2.h  pr2_actions.h  program_db.h  program_executor.h  robot_config.h  scene_db.h  step_executor.h  surface_segmentation_action.h  visualizer.h  world.h
rapid_pbd/launch/: .gitignore  app.launch  editor.launch  fetch.launch  fetch_app.launch  fetch_moveit.launch  planning_context.launch  pr2.launch  pr2_app.launch  pr2_moveit.launch  pr2_planning_context.launch  pr2_sim.launch  web_prereqs.launch
rapid_pbd/src/: action_clients.cpp  action_executor.cpp  action_utils.cpp  editor.cpp  editor_node.cpp  fetch_action_node.cpp  fetch_actions.cpp  joint_state.cpp  joint_state_reader.cpp  landmarks.cpp  motion_planning.cpp  pr2.cpp  pr2_action_node.cpp  pr2_actions.cpp  pr2_arm_joint_demo.cpp  pr2_gripper_demo.cpp  pr2_node.cpp  program_db.cpp  program_execution_demo.cpp  program_execution_node.cpp  program_executor.cpp  robot_config.cpp  scene_db.cpp  step_executor.cpp  surface_segmentation_action.cpp  surface_segmentation_node.cpp  visualizer.cpp  world.cpp
rapid_pbd_msgs/: CMakeLists.txt  package.xml
rapid_pbd_msgs/action/: ExecuteProgram.action  SegmentSurfaces.action
rapid_pbd_msgs/msg/: Action.msg  ArmControllerState.msg  ControlStrategy.msg  EditorEvent.msg  Landmark.msg  Program.msg  ProgramInfo.msg  ProgramInfoList.msg  ProgramList.msg  Step.msg
rapid_pbd_msgs/srv/: FreezeArm.srv  GetEEPose.srv  GetJointAngles.srv  RelaxArm.srv
rapid_perception/: CMakeLists.txt  README.md  package.xml
rapid_perception/include/: linemod_heat_mapper.h
rapid_perception/include/rapid_perception/: box3d_roi_server.h  cloud_indices.h  cloud_projection.h  conversions.h  fpfh_heat_mapper.h  grouping_pose_estimator.h  hsurface.h  icp_fitness_functions.h  image_recognition.h  pr2.h  (+16 more)
rapid_perception/launch/: debug_obj_pipeline.launch  kinect.launch  kinect_frames.launch  object_search.launch
rapid_perception/scripts/: download_test_data.sh
rapid_perception/src/: box3d_roi_server.cpp  cloud_projection.cpp  conversions.cpp  debug_obj_pipeline_main.cc  debug_obj_pipeline_main.cpp  fpfh_heat_mapper.cpp  grouping_pose_estimator.cpp  hsurface.cpp  icp_fitness_functions.cpp  image_recognition.cpp  linemod_heat_mapper.cpp  object.cpp  pose_estimation.cpp  pose_estimation_cnn_heat_mapper.cpp  pose_estimation_fpfh_heat_mapper.cpp  pose_estimation_heat_mapper.cpp  pose_estimation_linemod_heat_mapper.cpp  pose_estimation_match.cpp  pr2.cc  pr2.cpp  publish_saved_cloud_main.cpp  random_heat_mapper.cpp  ransac_pose_estimator.cpp  record_kinect_main.cpp  rgbd.cc  rgbd.cpp  save_cloud_main.cpp  scene.cc  scene.cpp  scene_parsing.cpp  scene_viz.cpp  template_matching_heat_mapper.cpp
rapid_perception/test/: icp_fitness_functions_test.cpp  rgbd_test.cc  rgbd_test.cpp  scene_parsing_test.cpp  scene_test.cpp  scene_viz_test.cpp
rapid_pr2/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
rapid_pr2/launch/: pr2.launch
rapid_pr2/src/: arm_joints.cpp  gripper.cc  gripper.cpp  gripper_main.cpp  head.cc  head.cpp  head_main.cpp  joint_states.cpp  pr2.cc  pr2.cpp  pr2_service_node.cc  torso.cpp  torso_main.cpp
rapid_pr2/test/: gripper_test.cc  gripper_test.launch  pr2_test.cc  pr2_test.cpp  pr2_test.launch
rapid_robot/: CMakeLists.txt  README.md  package.xml
rapid_robot/src/: joint_state_reader.cpp  joint_state_reader_main.cpp  point_cloud_camera.cpp  recorded_point_cloud_camera.cpp
rapid_ros/: CMakeLists.txt  README.md  package.xml
rapid_ros/src/: action_client.cpp  params.cpp  publisher.cpp  service_client.cpp  tf_listener.cpp  time.cpp
rapid_ros/test/: params.test  params_test.cpp
(+306 files in other folders)
