<?xml version="1.0"?>
<package format="2">
  <name>rapid_fetch</name>
  <version>0.1.0</version>
  <description>High level scripting interface for the Fetch robot.</description>

  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>rapid_display</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sound_play</depend>

  <export>
  </export>
</package>
