<?xml version="1.0"?>
<package>
  <name>rapid_pbd</name>
  <version>0.1.0</version>
  <description>Programming by demonstration for 1 or 2 arm robots</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rapid_pbd_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rapid_pbd_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
