<?xml version="1.0"?>
<package>
  <name>rapid_pbd</name>
  <version>0.1.0</version>
  <description>Programming by demonstration for 1 or 2 arm robots</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>rapid_pbd_msgs</build_depend>
  <build_depend>robot_state_publisher_latched</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>rapid_pbd_msgs</run_depend>
  <run_depend>robot_state_publisher_latched</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
