<?xml version="1.0"?>
<package>
  <name>rapid_pbd</name>
  <version>0.1.0</version>
  <description>Programming by demonstration for 1 or 2 arm robots</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_goal_builder</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>rapid_pbd_msgs</build_depend>
  <build_depend>robot_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>surface_perception</build_depend>
  <build_depend>transform_graph</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>depthcloud_encoder</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_goal_builder</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>rapid_pbd_msgs</run_depend>
  <run_depend>robot_markers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>ros_web_video</run_depend>
  <run_depend>surface_perception</run_depend>
  <run_depend>transform_graph</run_depend>

  <export>
    <appname>Rapid PbD</appname>
  </export>
</package>
