<?xml version="1.0"?>
<package format="2">
  <name>rapid_pr2</name>
  <version>0.1.0</version>
  <description>A library for controlling the PR2.</description>
  <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>pr2_controllers_msgs</depend>
  <depend>rapid_manipulation</depend>
  <depend>rapid_ros</depend>
  <depend>rapid_sound</depend>
  <depend>roscpp</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>
</package>
